syntax = "proto3";

option java_multiple_files = true;
option java_package = "tw.com.tymgateway.grpc.ckeditor";
option java_outer_classname = "CkeditorServiceProto";

package tymbackend.ckeditor;

service CkeditorService {
  rpc SaveContent(SaveContentRequest) returns (SaveContentResponse);
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
  rpc GetDraft(GetDraftRequest) returns (GetDraftResponse);
  rpc SaveDraft(SaveDraftRequest) returns (SaveDraftResponse);
}

message SaveContentRequest {
  string userId = 1;
  string editor = 2;
  string content = 3;
  string token = 4;
}

message SaveContentResponse {
  bool success = 1;
  string message = 2;
  string editor = 3;
}

message GetContentRequest {
  string editor = 1;
  string token = 2;
}

message GetContentResponse {
  bool success = 1;
  string content = 2;
  string editor = 3;
}

message GetDraftRequest {
  string userId = 1;
  string editor = 2;
  string token = 3;
}

message GetDraftResponse {
  bool success = 1;
  string content = 2;
  string editor = 3;
  string lastModified = 4;
}

message SaveDraftRequest {
  string userId = 1;
  string editor = 2;
  string content = 3;
  string token = 4;
}

message SaveDraftResponse {
  bool success = 1;
  string message = 2;
}
